--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,7 +10,10 @@ website:
       - href: index.qmd
         text: Home
       - Why_GAMLSS.qmd
-
+      - The R shoftware
+      - Distributions
+      - Model Fitting
+      - Interpretation
 
       
 sidebar:
