--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
   output-dir: docs
 website:
-  title: "GAMLSS Port Short Course 2024"
+  title: "GAMLSS Lavras Short Course 2025"
   navbar:
     background: primary
     search: true
